syntax = "proto3";
package subsocial;

message Request {
  oneof body {
    GetSystemProperties system_properties = 1;
    GenerateAccount generate_account = 2;
    ImportAccount import_account = 3;
    QueryAccountData query_account_data = 4;
    GetCurrentAccountId current_account_id = 5;
    GetNextSpaceId next_space_id = 6;
    GetSpaceById space_by_id = 7;
    GetSpaceByHandle space_by_handle = 8;
    GetSpaceIdsByOwner space_ids_by_owner = 9;
    CreateSpace create_space = 10;
    UpdateSpace update_space = 11;
    GetNextPostId next_post_id = 12;
    GetPostById post_by_id = 13;
    GetPostIdsBySpaceId post_ids_by_space_id = 14;
    CreatePost create_post = 15;
    UpdatePost update_post = 16;
    GetReactionById reaction_by_id = 17;
    GetReactionIdsByPostId reaction_ids_by_post_id = 18;
    GetReplyIdsByPostId reply_ids_by_post_id = 19;
    GetPostReactionIdByAccount post_reaction_id_by_account = 20;
    CreatePostReaction create_post_reaction = 21;
    UpdatePostReaction update_post_reaction = 22;
    DeletePostReaction delete_post_reaction = 23;
    GetSpaceFollowers space_followers = 24;
    GetSpacesFollowedByAccount spaces_followed_by_account = 25;
    IsSpaceFollower is_space_follower = 26;
    FollowSpace follow_space = 27;
    UnfollowSpace unfollow_space = 28;
    GetSocialAccountByAccountId social_account_by_account_id = 29;
    CreateProfile create_profile = 30;
    UpdateProfile update_profile = 31;
    GetAccountFollowers account_followers = 32;
    GetAccountsFollowedByAccount accounts_followed_by_account = 33;
    FollowAccount follow_account = 34;
    UnfollowAccount unfollow_account = 35;
    IsAccountFollower is_account_follower = 36;
    IsPostSharedByAccount is_post_shared_by_account = 37;
  }
}

message Response {
  oneof body {
    Error error = 1;
    SystemProperties system_properties = 2;
    AccountData account_data = 3;
    GeneratedAccount generated_account = 4;
    ImportedAccount imported_account = 5;
    CurrentAccountId current_account_id = 6;
    NextSpaceId next_space_id = 7;
    SpaceById space_by_id = 8;
    SpaceByHandle space_by_handle = 9;
    SpaceIdsByOwner space_ids_by_owner = 10;
    SpaceCreated space_created = 11;
    SpaceUpdated space_updated = 12;
    NextPostId next_post_id = 13;
    PostById post_by_id = 14;
    PostIdsBySpaceId post_ids_by_space_id = 15;
    ReplyIdsByPostId reply_ids_by_post_id = 16;
    PostCreated post_created = 17;
    PostUpdated post_updated = 18;
    ReactionById reaction_by_id = 19;
    ReactionIdsByPostId reaction_ids_by_post_id = 20;
    PostReactionIdByAccount post_reaction_id_by_account = 21;
    PostReactionCreated post_reaction_created = 22;
    PostReactionUpdated post_reaction_updated = 23;
    PostReactionDeleted post_reaction_deleted = 24;
    SpaceFollowers space_followers = 25;
    SpacesFollowedByAccount spaces_followed_by_account = 26;
    bool is_space_follower = 27;
    SpaceFollowed space_followed = 28;
    SpaceUnfollowed space_unfollowed = 29;
    AccountFollowers account_followers = 30;
    AccountsFollowedByAccount accounts_followed_by_account = 31;
    bool is_account_follower = 32;
    AccountFollowed account_followed = 33;
    AccountUnfollowed account_unfollowed = 34;
    SocialAccountByAccountId social_account_by_account_id = 35;
    ProfileCreated profile_created = 36;
    ProfileUpdated profile_updated = 37;
    bool is_post_shared_by_account = 38;
  }
}

message Error {
  enum Kind {
    KIND_UNKNOWN = 0;
    KIND_NETWORK = 1;
    KIND_INVALID_PROTO = 2;
    KIND_INVALID_REQUEST = 3;
    KIND_NOT_FOUND = 4;
    KIND_SUBXT = 5;
  }
  Kind kind = 1;
  string msg = 2;
}

// REQUESTS

message GetSpaceById { uint64 space_id = 1; }

message GetSpaceByHandle { string handle = 1; }

message GetPostById { uint64 post_id = 1; }

message GetReactionById { uint64 reaction_id = 1; }

message GetPostIdsBySpaceId { uint64 space_id = 1; }

message GetReactionIdsByPostId { uint64 post_id = 1; }

message GetReplyIdsByPostId { uint64 post_id = 1; }

message GetSocialAccountByAccountId { string account_id = 1; }

message GetNextSpaceId {}

message GetNextPostId {}

message GetCurrentAccountId {}

message GetSystemProperties {}

message GetSpaceIdsByOwner { string account_id = 1; }

message GetSpaceFollowers { uint64 space_id = 1; }

message GetSpacesFollowedByAccount { string account_id = 1; }

message GetAccountFollowers { string account_id = 1; }

message GetAccountsFollowedByAccount { string account_id = 1; }

message GetPostReactionIdByAccount {
  string account_id = 1;
  uint64 post_id = 2;
}

message QueryAccountData { string account_id = 1; }

message GenerateAccount { string password = 1; }

message ImportAccount {
  string password = 1;
  string suri = 2;
}

message CreatePostReaction {
  uint64 post_id = 1;
  Reaction.Kind kind = 2;
}

message CreatePost {
  uint64 space_id = 1;
  PostExtension extension_value = 2;
  Content content = 3;
}

message UpdatePost {
  uint64 post_id = 1;
  PostUpdate post_update = 2;
}

message FollowSpace { uint64 space_id = 1; }

message UnfollowSpace { uint64 space_id = 1; }

message IsAccountFollower { string account_id = 1; }

message IsSpaceFollower { uint64 space_id = 1; }

message IsPostSharedByAccount { uint64 post_id = 1; }

message UpdatePostReaction {
  uint64 post_id = 1;
  uint64 reaction_id = 2;
  Reaction.Kind new_kind = 3;
}

message DeletePostReaction {
  uint64 post_id = 1;
  uint64 reaction_id = 2;
}

message CreateProfile { Content content = 1; }

message UpdateProfile { Content maybe_content = 1; }

message CreateSpace {
  uint64 parent_id = 1;
  string handle = 2;
  Content content = 3;
  // TODO(@shekohex): add `SpacePermissions`.
}

message UpdateSpace {
  uint64 space_id = 1;
  SpaceUpdate update = 2;
}

message FollowAccount { string account_id = 1; }

message UnfollowAccount { string account_id = 1; }

// DATA

message WhoAndWhen {
  string account = 1;
  uint64 block_number = 2;
  uint64 time = 3;
}

message Content {
  oneof value {
    bytes raw = 1;
    string ipfs = 2;
    string hyper = 3;
  }
}

message RegularPost {}

message PostExtension {
  oneof value {
    RegularPost regular_post = 1;
    Comment comment = 2;
    SharedPost shared_post = 3;
  }
}

message Space {
  uint64 id = 1;
  WhoAndWhen created = 2;
  WhoAndWhen updated = 3;
  string owner = 4;
  uint64 parent_id = 5;
  string handle = 6;
  Content content = 7;
  bool hidden = 8;
  uint32 posts_count = 9;
  uint32 hidden_posts_count = 10;
  uint32 followers_count = 11;
  int32 score = 12;
}

message Post {
  uint64 id = 1;
  WhoAndWhen created = 2;
  WhoAndWhen updated = 3;
  string owner = 4;
  PostExtension extension_value = 5;
  uint64 space_id = 6;
  Content content = 7;
  bool hidden = 8;
  uint32 replies_count = 9;
  uint32 hidden_replies_count = 10;
  uint32 shares_count = 11;
  uint32 upvotes_count = 12;
  uint32 downvotes_count = 13;
  int32 score = 14;
}

message Comment {
  uint64 parent_id = 1;
  uint64 root_post_id = 2;
}

message SharedPost { uint64 root_post_id = 1; }

message Reaction {
  enum Kind {
    UNKNOWN = 0;
    UP_VOTE = 1;
    DOWN_VOTE = 2;
  }
  uint64 id = 1;
  WhoAndWhen created = 2;
  WhoAndWhen updated = 3;
  Kind kind = 4;
}

message SocialAccount {
  uint32 followers_count = 1;
  uint32 following_accounts_count = 2;
  uint32 following_spaces_count = 3;
  uint32 reputation = 4;
  Profile profile = 5;
}

message Profile {
  WhoAndWhen created = 1;
  WhoAndWhen updated = 2;
  Content content = 3;
}

message PostUpdate {
  Content content = 1;
  bool hidden = 2;
}

message SpaceUpdate {
  uint64 parent_id = 1;
  string handle = 2;
  Content content = 3;
  bool hidden = 4;
  // TODO(@shekohex): add `SpacePermissions` here.
}

// RESPONSES

message SpaceById { Space space = 1; }

message SpaceByHandle { Space space = 1; }

message PostById { Post post = 1; }

message ReactionById { Reaction reaction = 1; }

message PostIdsBySpaceId { repeated uint64 post_ids = 1 [ packed = true ]; }

message ReactionIdsByPostId {
  repeated uint64 reaction_ids = 1 [ packed = true ];
}

message ReplyIdsByPostId { repeated uint64 reply_ids = 1 [ packed = true ]; }

message SocialAccountByAccountId { SocialAccount social_account = 1; }

message NextSpaceId { uint64 id = 1; }

message NextPostId { uint64 id = 1; }

message CurrentAccountId { string account_id = 1; }

message SpaceIdsByOwner { repeated uint64 space_ids = 1 [ packed = true ]; }

message SpaceFollowers { repeated string account_ids = 1; }

message SpacesFollowedByAccount {
  repeated uint64 space_ids = 1 [ packed = true ];
}

message AccountFollowers { repeated string account_ids = 1; }

message AccountsFollowedByAccount { repeated string account_ids = 1; }

message GeneratedAccount {
  string public_key = 1;
  string seed_phrase = 2;
}

message ImportedAccount { string public_key = 1; }

message PostReactionCreated {
  uint64 post_id = 1;
  uint64 reaction_id = 2;
}

message PostCreated {
  string account_id = 1;
  uint64 post_id = 2;
}

message PostUpdated {
  string account_id = 1;
  uint64 post_id = 2;
}

message SpaceFollowed {
  string follower = 1;
  uint64 space_id = 2;
}

message SpaceUnfollowed {
  string follower = 1;
  uint64 space_id = 2;
}

message PostReactionUpdated {
  uint64 post_id = 1;
  uint64 reaction_id = 2;
}

message PostReactionDeleted {
  uint64 post_id = 1;
  uint64 reaction_id = 2;
}

message ProfileCreated { string account_id = 1; }

message ProfileUpdated { string account_id = 1; }

message SpaceCreated {
  string account_id = 1;
  uint64 space_id = 2;
}

message SpaceUpdated {
  string account_id = 1;
  uint64 space_id = 2;
}

message AccountFollowed {
  string follower = 1;
  string following = 2;
}

message AccountUnfollowed {
  string follower = 1;
  string unfollowing = 2;
}

message PostReactionIdByAccount { uint64 reaction_id = 1; }

message AccountData {
  string free_balance = 1;
  string reserved_balance = 2;
  string misc_frozen_balance = 3;
  string fee_frozen_balance = 4;
}

message SystemProperties {
  uint32 ss58_format = 1;
  uint32 token_decimals = 2;
  string token_symbol = 3;
}
